force-app/main/default/objects/Exception__c/fields/Exception_Cause__c.field-meta.xml
<CustomField>
    <fullName>Exception_Cause__c</fullName>
    <label>Exception Cause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>