force-app/main/default/objects/Exception__c/fields/Exception_Caused_by__c.field-meta.xml
<CustomField>
    <fullName>Exception_Caused_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exception Caused by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>