force-app/main/default/objects/Exception__c/fields/Exception_Caused_By_formula__c.field-meta.xml
<CustomField>
    <fullName>Exception_Caused_By_formula__c</fullName>
    <formula>Exception_Caused_by__r.FirstName &amp;&quot; &quot;&amp; Exception_Caused_by__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exception Caused By</label>
    <type>Text</type>
</CustomField>